@@ -20,7 +20,6 @@ use EPrints;
 use strict;
 
 use EPrints::ScreenProcessor;
-
 my $session = EPrints::Session->new();
 
 EPrints::ScreenProcessor->process( session=>$session, url=>$session->get_repository->get_conf( "perl_url" )."/users/home" );
